<resources>
    <string name="app_name">Casanova</string>
    <string name="login">Login</string>
    <string name="registrarUsuario">Registrar Usuario</string>
    <string name="restablecerContraseña">Restablecer Contraseña</string>
    <string name="restablecerContraseña_contenido">Se le enviara un mensaje a su correo electronico donde podra reestrablecer su contraseña</string>
    <string name="yaTengoCuenta">Ya tengo una Cuenta</string>
    <string name="noTienesCuentaRegistrateAqui">No Tienes Cuenta? Registrate aquí</string>
    <string name="entrarSistema">Entrar</string>
    <string name="registrarNuevoUsuario">Registrarse</string>
    <string name="olvidarteTuContraseña">Olvistaste tu Contraseña?</string>
    <string name="enviarAlCorreoElectronico">Enviar al Correo Electronico</string>
    <string name="ingreseNombres">Ingrese Nombres</string>
    <string name="ingreseApellidos">Ingrese Apellidos</string>
    <string name="ingreseDNI">Ingrese DNI</string>
    <string name="ingreseEdad">Ingrese Edad</string>
    <string name="ingreseTelefono">Ingrese Telefono</string>
    <string name="ingreseCorreo">Ingrese Correo</string>
    <string name="ingresePassword">Ingrese Contraseña</string>
    <string name="ingreseConfirmarPassword">Confirmar Contraseña</string>
    <string name="todo">todo</string>
    <string name="reservar_ahora">Reservar Ahora</string>
    <string name="habitacion_doble">Habitacion Doble</string>
    <string name="titulo_de_la_foto">Titulo de la foto</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    <!-- FRAGMENT NOSOTROS -->
    <string name="nosotros_Bienvenido">Bienvenido</string>
    <string name="nosotros_mision">Misión</string>
    <string name="nosotros_vision">Visión</string>
    <string name="nosotros_text">em Ipsum is simply dummy text of the printing and
        typesetting industry. Lorem Ipsum has been the industrys standard dummy text
        ever since the 1500s, when an unknown printer took a galley of type and
        scrambled it to make a type specimen book. It has survived not only five centuries,
        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <!-- FRAGMENT CARDVIEW_HABITACIONES -->
    <string name="habitacion_nombre">Habitacion A</string>
    <string name="habitacion_precio">S/ </string>
    <string name="habitacion_precio2">100.00</string>
    <string name="habitacion_caracteristicas">Caracteristicas: </string>
    <string name="habitacion_descripcion">Aire acondicionadoFrigobar, Conexion a Internet, Jacuzzy, Telefono en linea, Direct TV plasma satelital</string>
    <!-- TEXTO MENU LATERAL -->
    <string name="nav_item_Habitaciones">Habitaciones</string>
    <string name="nav_item_Reservas">Reservas</string>
    <string name="nav_item_Reservar_WhastApp">Reservar por WhastApp</string>
    <string name="nav_item_Perfil">Perfil</string>
    <string name="nav_item_Nosotros">Nosotros</string>
    <string name="nav_item_Salir">Salir</string>
    <string name="nav_item_Facebook">Facebook</string>
    <string name="nav_item_WhastApp">WhastApp</string>
    <string name="nav_item_Instamgram">Instagram</string>
    <string name="nav_item_Ubicacion">Ubicacion</string>
    <string name="nav_item_Llamar">Llamar al Hotel</string>
    <string name="nav_item_Compartir">Compartir App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>