<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Habitacion"
            android:icon="@drawable/ic_habitacion"
            android:title="@string/nav_item_Habitaciones" />
        <item
            android:id="@+id/nav_Reserva"
            android:icon="@drawable/ic_reserva"
            android:title="@string/nav_item_Reservas" />
        <item
            android:id="@+id/nav_Perfil"
            android:icon="@drawable/ic_usuario"
            android:title="@string/nav_item_Perfil" />
        <item
            android:id="@+id/nav_Nosotros"
            android:icon="@drawable/ic_hotel"
            android:title="@string/nav_item_Nosotros" />
        <item
            android:id="@+id/nav_Salir_Sesion"
            android:icon="@drawable/ic_cerrar_sesion"
            android:title="@string/nav_item_Salir" />
    </group>
    <item android:title="Nuestras Redes Sociales">
        <menu>
            <item android:id="@+id/nav_Facebook"
                android:icon="@drawable/ic_facebook"
                android:title="@string/nav_item_Facebook" />
            <item android:id="@+id/nav_WhatsApp"
                android:icon="@drawable/ic_whatsapp"
                android:title="@string/nav_item_WhastApp" />
            <item android:id="@+id/nav_Instangram"
                android:icon="@drawable/ic_instagram"
                android:title="@string/nav_item_Instamgram" />
        </menu>
    </item>
    <item android:title="Otros">
        <menu>
            <item android:id="@+id/nav_Ubicacion"
                android:icon="@drawable/ic_direccion"
                android:title="@string/nav_item_Ubicacion" />
            <item android:id="@+id/nav_LLamar"
                android:icon="@drawable/ic_llamar"
                android:title="@string/nav_item_Llamar" />
            <item android:id="@+id/nav_Compartir"
                android:icon="@drawable/ic_compartir"
                android:title="@string/nav_item_Compartir" />
        </menu>
    </item>
</menu>