<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_3"
    tools:context=".RegisterUser_Acticity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@drawable/bg_ripple_contener_login"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textStyle="normal"
            android:textColor="@color/blanco"
            android:text="@string/registrarUsuario"
            android:textSize="30sp"
            />

        <EditText
            android:id="@+id/mEditTextNombres"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="normal"
            android:background="@drawable/bg_ripple_campos"
            android:hint="@string/ingreseNombres"
            android:textColor="@color/negro"
            android:importantForAutofill="yes"
            android:inputType="text"
            android:maxLength="20"
            android:autofillHints="" />


        <EditText
            android:id="@+id/mEditTextApellidos"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="normal"
            android:background="@drawable/bg_ripple_campos"
            android:hint="@string/ingreseApellidos"
            android:textColor="@color/negro"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="20"
            />
        <EditText
            android:id="@+id/mEditTextNDni"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="normal"
            android:background="@drawable/bg_ripple_campos"
            android:hint="@string/ingreseDNI"
            android:textColor="@color/negro"
            android:inputType="number"
            android:importantForAutofill="no"
            android:maxLength="8"
            />
        <EditText
            android:id="@+id/mEditTextEdad"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="normal"
            android:background="@drawable/bg_ripple_campos"
            android:hint="@string/ingreseEdad"
            android:textColor="@color/negro"
            android:inputType="number"
            android:importantForAutofill="no"
            android:maxLength="2"
            />
        <EditText
            android:id="@+id/mEditTextTelefono"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="normal"
            android:background="@drawable/bg_ripple_campos"
            android:hint="@string/ingreseTelefono"
            android:textColor="@color/negro"
            android:inputType="number"
            android:importantForAutofill="no"
            android:maxLength="9"
            />
        <EditText
            android:id="@+id/mEditTextCorreo"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="normal"
            android:background="@drawable/bg_ripple_campos"
            android:hint="@string/ingreseCorreo"
            android:textColor="@color/negro"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:maxLength="50"
            />
        <EditText
            android:id="@+id/mEditTextContraseña"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="normal"
            android:background="@drawable/bg_ripple_campos"
            android:hint="@string/ingresePassword"
            android:textColor="@color/negro"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:maxLength="15"
            />
        <EditText
            android:id="@+id/mEditTextConfirmarContraseña"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="normal"
            android:background="@drawable/bg_ripple_campos"
            android:hint="@string/ingreseConfirmarPassword"
            android:textColor="@color/negro"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:maxLength="15"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/mButtonRegistrarUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/btn_azul1"
                android:textColor="@drawable/btn_bg_ripple_azul_texto1"
                android:text="@string/registrarUsuario"
                />
            <Button
                android:id="@+id/mButtonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/btn_rojo2"
                android:textColor="@drawable/btn_bg_ripple_rojo_texto2"
                android:text="@string/yaTengoCuenta"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>