<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="15dp"
    android:orientation="vertical"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp">

            <ImageView
                android:layout_width="123dp"
                android:layout_height="123dp"
                android:src="@drawable/perfil_casanova"
                android:contentDescription="@string/habitacion_nombre" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/rgb"
                android:layout_gravity="bottom|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mCosto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/habitacion_precio"
                    android:textColor="@color/blanco"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mTextViewPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/habitacion_precio2"
                    android:textColor="@color/blanco"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mTextViewNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/habitacion_nombre"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/habitacion_caracteristicas"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/mTextViewCaracteristicas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/habitacion_descripcion"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
