<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nosotros_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"

            android:contentDescription="@string/nosotros_Bienvenido"
            android:src="@drawable/perfil_casanova" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="-30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_azul1"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/nosotros_Bienvenido"
            android:textColor="@drawable/btn_bg_ripple_azul_texto1"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/nosotros_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_azul1"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/nosotros_mision"
            android:textColor="@drawable/btn_bg_ripple_azul_texto1"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/nosotros_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_azul1"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/nosotros_vision"
            android:textColor="@drawable/btn_bg_ripple_azul_texto1"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/nosotros_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>