<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradiente"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        android:background="@drawable/bg_ripple_contener_login"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/restablecerContraseña"
            android:textColor="@color/blanco"
            android:textSize="30sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/mEditTextCorreo"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="normal"
            android:background="@drawable/bg_ripple_campos"
            android:hint="@string/ingreseCorreo"
            android:textColor="@color/negro"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            />


        <Button
            android:id="@+id/mButtonEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textStyle="normal"
            android:background="@drawable/color_btn_entrar"
            android:textColor="@drawable/texto_btn_uno"
            android:text="@string/enviarAlCorreoElectronico"
            />

    </LinearLayout>
</LinearLayout>